Refine #pelican width + responsiveness

--- a/templates/landings/about.html
+++ b/templates/landings/about.html
@@ -35,6 +35,19 @@
        margin: 25px;
        margin-top: -30px;
    }
+   #pelican {
+      float:none;
+      width:315px;
+      margin-bottom: 50px;
+   }
+
+   @media (min-width: 860px) and (max-width: 99767px) {
+   #pelican {
+      width:50%;
+   }
+  }
+ 
+
    </style>
    
 
