Adjust #pelican width

--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -119,6 +119,12 @@ li.biblio {
 #formerly-rsoap {
   width: 20%;
 }
+
+#pelican {
+    float: right;
+    width: 315px;
+    margin-bottom: 50px;
+}
       </style>
 </head>
 <body>
