Remove 'global initiation' elements

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -71,11 +71,8 @@
 
     <!-- Original concept borrowed from Marco Dell'Anna in a CodePen titled ALIEN - Deviation of microcosm, source: https://codepen.io/plasm/pen/JNPXxg  -->
 
-    <center><img width="15%" src="{% static 'img/compass.png' %}"></center>
-
-    <!--<h1>TAROT</h1>  -->
-    <h1>GLOBAL<br>INITIATION</h1>
-    
+    <h1>TAROT</h1>  
+       
     <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3>
 
@@ -93,9 +90,7 @@
     <h3><a href="{% url 'watchtower' %}">@ THE WATCHTOWER</a></h3>
 
     <!-- Special article:  -->
-    <h3>      
-        <a href="{% url 'article' 'amerika' %}">@ AMERIKA</a>
-    </h3> 
+    
     
     <h3>      
         <a href="{% url 'article' 'stewart_mortenson_runyon' %}">@ MISC</a>
