--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -119,6 +119,7 @@ li.biblio {
 }
 #formerly-rsoap {
   width: 20%;
+  display: none;
 }
 
 #pelican {
@@ -132,6 +133,9 @@ li.biblio {
     float: right;
     margin-bottom: 0.5em;
     display:none;
+}
+img {
+  display:none;
 }
       </style>
 </head> 
