Removed important property and keep the old website layout as it was before removing the property

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,4 +1,4 @@
-<footer id="main-footer" class="py-4 bg-primary text-white text-center">
+<footer id="main-footer" class="py-4 navbar_bg_color text-white text-center">
     
     <div id="license">
     
