--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -22,7 +22,7 @@ html{
 }
 
 .btn-secondary {
-  color: #fff !important;
+  color: #fff;
 }
 
 /*img {
@@ -139,7 +139,11 @@ html{
     text-align: center;
   }
   #top-bar .social {
-    text-align: center !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    /* text-align: center !important; */
   }
 }
 
@@ -152,8 +156,12 @@ html{
   }
 }
 
-.bg-primary {
+/* .bg-primary {
   background-color: black !important;
+  border-top: crimson solid;
+} */
+.navbar_bg_color{
+  background-color: black;
   border-top: crimson solid;
 }
 
@@ -163,7 +171,7 @@ html{
 }
 
 .text-white {
-  color: white !important;
+  color: white; /* old !important */
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
@@ -200,7 +208,7 @@ html{
 
 .mr-3,
 .mx-3 {
-  margin-right: 3rem !important;
+  margin-right: 3rem ; /* old !important it is being used to manage the menu spacing with greater resulutions  */
   margin: auto;
   box-sizing: border-box;
 }
@@ -224,9 +232,12 @@ html{
     font-size: 100%;
   }
 
-  .mr-md-3,
+  /* .mr-md-3,
   .mx-md-3 {
     margin-right: 1.6em !important;
+  } */
+  .menu_spacing_mobile_res{
+    margin-right: 1.6em;
   }
 }
 
@@ -385,16 +396,21 @@ button:focus {
   min-width: 100%;
   padding-right: 15px;
   padding-left: 15px;
-  text-align: center !important;
+  text-align: center; /* old !important*/
+  /* being used to center the content of top banner */
 }
 .social {
-  text-align: center !important;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  /* text-align: center !important; */
 }
 
-
+    /* it is related to upper banner */
 .container {
-  display: block !important;
-  opacity: 1 !important;
+  display: block;
+  opacity: 1;
+   /* 396, 397*/
 }
 
 
@@ -417,8 +433,11 @@ button:focus {
 
 
 @media (min-width: 768px) {}
-.mr-md-3, .mx-md-3 {
-    margin-right: 4% !important;
+/* .mr-md-3, .mx-md-3 { 
+  margin-right: 4% !important;
+} */
+.menu_spacing{
+  padding-right: 4%;
 }
 }
 
