--- a/tarot_juicer/static/css/tarot_key.css
+++ b/tarot_juicer/static/css/tarot_key.css
@@ -371,7 +371,7 @@ section.general img {
 }
 
 * {
-  margin: 0 auto;
+  /* margin: 0 auto; */
   /*padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
