--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -11,19 +11,19 @@
         {% endif %}
         <div class="topbar-content col-md-4">
           <div class="social text-right">
-            <a style="color:white;" href="#">
+            <a style="color:white; padding-right: 5px;" href="#">
               <i class="fab fa-twitter"></i>
             </a>
-            <a style="color:white;" href="#">
+            <a style="color:white; padding-right: 5px;" href="#">
               <i class="fab fa-facebook"></i>
             </a>
-            <a style="color:white;" href="#">
+            <a style="color:white; padding-right: 5px;" href="#">
               <i class="fab fa-linkedin"></i>
             </a>
-            <a style="color:white;" href="#">
+            <a style="color:white; padding-right: 5px;" href="#">
               <i class="fab fa-instagram"></i>
             </a>
-            <a style="color:white;" href="#">
+            <a style="color:white; padding-right: 5px;" href="#">
               <i class="fab fa-pinterest"></i>
             </a>
           </div>
