--- a/tarot_juicer/static/css/tarot_key.css
+++ b/tarot_juicer/static/css/tarot_key.css
@@ -541,6 +541,7 @@ h1,
 
 .flex-item {
   max-width: 125px;
+  margin: 0 auto;
 }
 
 .narrative-h1s {
@@ -709,4 +710,8 @@ img {
     color: crimson;
     /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff;
+  }
+
+  .num {
+    margin: 0 auto;
   }
