--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -26,7 +26,7 @@
         {% for card in cards %}
         <div class="slide">
               <img src="{{card.card_image}}" data-card="{{ card.number }}" alt="{{ card.title }}" {% if card.number == generator.number %} id="active"{% endif %} draggable="false" />
-              <div>{{card.number}}</div>
+              <div class="num">{{card.number}}</div>
         </div>
         {% endfor %}
         <div class="slide"><img src="{% static 'img/cardback.jpg' %}" alt="card back image"></div>
