Replace "image/vnd.microsoft.icon" with type="image/x-icon"

--- a/templates/500.html
+++ b/templates/500.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" name=viewport content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/vnd.microsoft.icon">
+  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/x-icon">
   <title>500</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
