--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="{% static 'css/gateway.css' %}" type="text/css">
   <title>Protected Gateway</title>
-  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/vnd.microsoft.icon">
+  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/x-icon">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KHJ7HMKT1"></script>
   <script>
