--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="robots" content="noindex,nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/vnd.microsoft.icon">
+  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/x-icon">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
