--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/vnd.microsoft.icon">
+  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/x-icon">
   <title>Document</title>
 </head>
 <body>
