--- a/templates/landings/how_to.html
+++ b/templates/landings/how_to.html
@@ -37,7 +37,7 @@
 
 {% if how_tos %}
    {% for how_to in how_tos %}    
-   <h1 id="title"> {{ how_to.title }} </h1>
+   <h1 id="title" style='text-shadow: None'> {{ how_to.title }} </h1>
    <br>
    <br>
       <p class="text-justify"> {{ how_to.text_content|safe }} </p>
