Tarot img styling makeover for 'about' page

--- a/templates/landings/about.html
+++ b/templates/landings/about.html
@@ -26,21 +26,105 @@
          width: 29%;
          
       }*/
-      
-      .img-descr {
-          float:left;
-          width:33%;
-          text-align:left;
-          text-size: 90%;
-          margin: 0px;
+      img {
+         width: 100%;
       }
-      #formerly-rsoap {
-         padding: 6px;
-         margin:36px; /*6px*/
-         margin-bottom: 4px;
-          border: 3pt dotted crimson;
+      .fool-left-class-descr {
+         float: left;
+         padding: 0px;
+         width: 250px;
+         clear: both;
+         display: block;
+         margin-left: 0px;
+         margin:50px;
+         font-weight: bold;
+         text-align: center;
+         /*border: 3pt dotted crimson;*/
       }
 
+      #fool-left-id {
+         border: none;
+         width: 100%;
+         clear: both;
+         display: block;
+         padding: 6px;
+         margin:0px; 
+         margin-right: -15px;
+         margin-bottom: 4px;
+         float: none;
+         
+      }
+/*
+      .wheel-right-class-descr {
+         /*clear: both;
+         display: block;
+         
+         float:right;
+         float:right;
+         width:92%;
+         padding-left: 0px;
+         padding-right: 0px;
+         text-align: right;
+         margin: 50px;
+      }*/
+      .wheel-right-class-descr {
+         float: right;
+         padding: 0px;
+         width: 250px;
+         clear: both;
+         display: block;
+         margin-left: 0px;
+         margin:50px;
+         font-weight: bold;
+         text-align: center;
+         /*border: 3pt dotted crimson;         */
+      }
+      #wheel-right-id {
+         border: none;
+         width: 100%;
+         clear: both;
+         display: block;
+         padding: 6px;
+         margin:0px; 
+         margin-right: -15px;
+         margin-bottom: 4px;
+         float: none;
+         
+      }
+
+      /*#wheel-right-id{        
+         float: right;
+         padding: 5px;
+         width: 40%;
+         clear: both;
+         display: block;
+         margin: 0px;
+         margin-right: 0px; 
+         margin-bottom: 0px;
+         margin-left: 0px;
+         border: 3pt dotted crimson;
+         
+      }*/
+
+      .text {
+         
+         text-align: left;
+         padding: 0px;
+         border: 0px;
+         padding-left: 50px;
+         color:gold;
+      }
+      /*         padding: 10px;
+  border: none;
+  float: right;
+  padding: 20px;
+  width: 100%;
+  clear: both;
+  display: block;
+  margin: 30px;
+*/
+         
+      
       #pelican {
          float:none;
          width:315px;
@@ -51,13 +135,19 @@
          padding: 0px;
       }
    
-      .right {
-     float: right;
-     /*margin-right:0px;*/
-   }
-   
-   
-      @media (min-width: 860px) and (max-width: 99767px) {
+    .horus{
+      border: none;
+      margin:auto 0;
+      float:none;
+      width: 325px;
+      padding-top: 75px;
+    }
+    
+    .lvx {
+      padding-top: 75px;
+    }
+
+    @media (min-width: 860px) and (max-width: 99767px) {
       #pelican {
          width:50%;
       }
@@ -65,16 +155,29 @@
      }
      @media (max-device-width: 640px) {
           /* styles for mobile browsers smaller than 480px; (iPhone) */
-          .img-descr {
-         width:56%;
-      }  }
-    .horus{
-      border: none;
-      margin:auto 0;
-      float:none;
-      width: 30%;
-      padding-top: 75px;
-    }
+          .fool-left-class-descr {
+            width:50%;
+            margin-left: 0px;
+         }  
+
+         .fool-left-id {
+            width: 150%;
+         }
+         .wheel-right-class-descr {
+               width: 50%;
+               margin-right: 0px;
+         }
+         #wheel-right-id {
+            
+            width: 100%;
+            /*margin-right: -115px;
+            margin-left: 25px;
+            margin-bottom: 25px;*/
+         }
+         .horus {
+            width: 90%;
+         }
+      }
       </style>
       {% endblock %}
 {% block content %}    
