Adjust <link rel="icon"...> in template

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="robots" content="noindex,nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/x-icon">
+  <link rel="icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/x-icon">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
@@ -25,7 +25,7 @@
   
   <meta name="theme-color" content="#fafafa">
   
-  <title>{% block title %}{% endblock %}Global Initiation</title>
+  <title>{% block title %}{% endblock %}ROTA</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KHJ7HMKT1"></script>
