--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -6,13 +6,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Global Initiation</title>
+  <title>ROTA</title>
   <meta name="author" content="name">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
   <meta name="robots" content="noindex,nofollow" />
   <meta name="theme-color" content="black">
-  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/x-icon">
+  <link rel="icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/x-icon">
   <!--  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
   <!-- <link rel="stylesheet" href="css/styles.css" type="text/css">-->
   
