--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -70,6 +70,11 @@
   <div class="title">
 
     <!-- Original concept borrowed from Marco Dell'Anna in a CodePen titled ALIEN - Deviation of microcosm, source: https://codepen.io/plasm/pen/JNPXxg  -->
+    <img class="site-logo one" src="https://i.imgur.com/1i6kGdC.jpg" alt="The Empress" />
+    
+    <img class="site-logo two" src="https://i.imgur.com/MdFvO57.jpg" alt="Strength" />
+
+    <img class="site-logo three" src="https://i.imgur.com/ob343qN.jpg" alt="The Emperor"/>
 
     <h1>TAROT</h1>  
        
