FIxed 500 error. now it displays correct 404 page upon entering the wrong url

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" name=viewport content="width=device-width, initial-scale=1">
   <title>404</title>
-  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/vnd.microsoft.icon">
+  <link rel="shortcut icon" href="img/crimson-hexagram.ico" type="image/vnd.microsoft.icon">
   	<style>
     body {
       width: 60%;
