Added comments for future guid

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" name=viewport content="width=device-width, initial-scale=1">
   <title>404</title>
+  <!-- use static file paths without loading static -->
   <link rel="shortcut icon" href="img/crimson-hexagram.ico" type="image/vnd.microsoft.icon">
   	<style>
     body {
