--- a/templates/500.html
+++ b/templates/500.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" name=viewport content="width=device-width, initial-scale=1">
-  
+  <!-- use static file paths without loading static -->
   <link rel="shortcut icon" href="img/crimson-hexagram.ico" type="image/vnd.microsoft.icon">
   <title>500</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
