Google Analytics change over to new Domain

--- a/templates/404.html
+++ b/templates/404.html
@@ -94,6 +94,15 @@
       })();
     </script>
     <!-- End Matomo Code -->
+<!-- Google tag (gtag.js) - Google Analytics - ROTA -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-59HTYTYG2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-59HTYTYG2Z');
+</script>
+<!-- END GOOGLE ANALYTICS -->
 </body>
 </html>
