--- a/templates/base.html
+++ b/templates/base.html
@@ -27,16 +27,16 @@
   
   <title>{% block title %}{% endblock %}ROTA</title>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KHJ7HMKT1"></script>
+  <!-- Google tag (gtag.js) - Google Analytics - ROTA -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-59HTYTYG2Z"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-1KHJ7HMKT1');
+    gtag('config', 'G-59HTYTYG2Z');
   </script>
-  <!-- GOOGLE ANALYTICS -->
+  <!-- END GOOGLE ANALYTICS -->
 
 </head>
 
