--- a/templates/landings/reentry.html
+++ b/templates/landings/reentry.html
@@ -7,16 +7,17 @@
   <link rel="stylesheet" href="#" type="text/css">
   <title>Protected Gateway</title>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KHJ7HMKT1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+<!-- Google tag (gtag.js) - Google Analytics - ROTA -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-59HTYTYG2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-1KHJ7HMKT1');
-  </script>
-  <!-- GOOGLE ANALTICS -->
+  gtag('config', 'G-59HTYTYG2Z');
+</script>
+<!-- END GOOGLE ANALYTICS -->
+
   <style>
 
       section {
