--- a/templates/500.html
+++ b/templates/500.html
@@ -9,6 +9,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+<!-- Google tag (gtag.js) - Google Analytics - ROTA -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-59HTYTYG2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-59HTYTYG2Z');
+</script>
+<!-- END GOOGLE ANALYTICS -->
+
   <style>
    body {
     background-image: url("https://d33wubrfki0l68.cloudfront.net/e585f81a0b18723a6972cf293e97585f47303d0e/6ae49/images/404.jpg");
