--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -31,16 +31,16 @@
     h3 {font-family: 'Varela Round', sans-serif;}
   </style>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KHJ7HMKT1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+<!-- Google tag (gtag.js) - Google Analytics - ROTA -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-59HTYTYG2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-1KHJ7HMKT1');
-  </script>
-  <!-- GOOGLE ANALYTICS -->
+  gtag('config', 'G-59HTYTYG2Z');
+</script>
+<!-- END GOOGLE ANALYTICS -->
 
 </head>
 
