Continue purge of 'GA.agency' strings

--- a/templates/essays/content_changelog.html
+++ b/templates/essays/content_changelog.html
@@ -6,7 +6,7 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="robots" content="noindex,nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Content Changelog: Global Initiation</title>
+  <title> Content Changelog</title>
   
 
 {% load static %}
