--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -67,7 +67,7 @@
 
         <section class="general tarot_key_background">
 
-          <h1>Key {{ generator.number }}: {{ generator.title }} </h1>
+          <h1>Card {{ generator.number }}: {{ generator.title }} </h1>
 
 
           <img src="{{ generator.tarot_card_image }}" alt="tarot key" />
