--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -6,7 +6,7 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="robots" content="noindex,nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>CONTENT DUMP: Global Initiation</title>
+  <title>CONTENT DUMP: ROTA</title>
 
 {% comment %} {% extends 'base.html' %} {% endcomment %}
 
