Fixed image and its attribute movement

--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -69,7 +69,7 @@
         <section class="general tarot_key_background">          
 
 
-          <img src="{{ generator.tarot_card_image }}" alt="tarot key" />
+          <img class='img_class' src="{{ generator.tarot_card_image }}" alt="tarot key" />
 
           <ul class="esoteric-attributes">
             <li>Astrological Attribute: {{ generator.astrological }}</li>
