--- a/tarot_juicer/static/css/tarot_key.css
+++ b/tarot_juicer/static/css/tarot_key.css
@@ -628,8 +628,17 @@ section.general {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  /* margin-left: 20%; */
+  margin-left: 20%;
 }
+
+section > img.img_class{
+  margin-left: 12%;
+}
+
+section > ul.esoteric-attributes{
+  margin-left: 5%;
+}
+
 }
 
 @media (min-width: 700px) and (min-width: 768px) {
@@ -639,7 +648,7 @@ section.general {
     padding: 0.5em;
     margin-bottom: 1em;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     align-items: center;
     margin-left: 20%;
   }
