--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -72,11 +72,11 @@
           <img class='img_class' src="{{ generator.tarot_card_image }}" alt="tarot key" />
 
           <ul class="esoteric-attributes">
-            <li>Astrological Attribute: {{ generator.astrological }}</li>
-            <li>Alchemical Attribute: {{ generator.alchemical }}</li>
-            <li>Intelligence:  {{ generator.intelligence }} </li>
-            <li>Hebrew Letter:  {{ generator.hebrew_letter }}</li>
-            <li>Letter Meaning: {{ generator.letter_meaning }}</li>
+            <li><abbr style="color:#bdbdbd;">Astrological Attribute</abbr>: {{ generator.astrological }}</li>
+            <li><abbr style="color:#bdbdbd;">Alchemical Attribute</abbr>: {{ generator.alchemical }}</li>
+            <li><abbr style="color:#bdbdbd;">Intelligence</abbr>:  {{ generator.intelligence }} </li>
+            <li><abbr style="color:#bdbdbd;">Hebrew Letter:</abbr>  {{ generator.hebrew_letter }}</li>
+            <li><abbr style="color:#bdbdbd;">Letter Meaning:</abbr> {{ generator.letter_meaning }}</li>
           </ul>
 
           <!-- CONTENT COMMENT FOR LATER USE IN ISSUE-#141 -->
