--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -68,9 +68,10 @@
         <h1>Key {{ generator.number }}: {{ generator.title }} </h1>
         <section class="general tarot_key_background">          
 
-
-          <img class='img_class' src="{{ generator.tarot_card_image }}" alt="tarot key" />
-
+          <div class="prent_for_animations">
+            <span class="card_animation_ch"></span>
+            <img class='img_class card_animation' src="{{ generator.tarot_card_image }}" alt="tarot key" />
+          </div>
           <ul class="esoteric-attributes">
             <li>Astrological Attribute: {{ generator.astrological }}</li>
             <li>Alchemical Attribute: {{ generator.alchemical }}</li>
