--- a/tarot_juicer/static/css/tarot_key.css
+++ b/tarot_juicer/static/css/tarot_key.css
@@ -415,20 +415,20 @@ section.general {
 
 .card_animation_ch::after {
   position: absolute;
-  content: "";
-  top: calc(var(--card-height) / 19);
-  left: 0;
-  right: 0;
-  z-index: -1;
-  height: 100%;
-  width: 100%;
-  margin: 0 auto;
-  transform: scale(0.8);
-  filter: blur(calc(var(--card-height) / 6));
-  background-image: linear-gradient(var(--rotate), #ff00008f, #ed143df2 43%, white);
-  opacity: 1;
-  transition: opacity .5s;
-  animation: spin 8s linear infinite;
+    content: "";
+    top: calc(var(--card-height) / 7);
+    left: -8%;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 116%;
+    margin: 0 auto;
+    transform: scale(0.8);
+    opacity: 1;
+    transition: opacity .5s;
+    filter: blur(calc(var(--card-height) / 7));
+    background-image: linear-gradient(var(--rotate), red, crimson 43%, white);
+    animation: spin 8s linear infinite;
 }
 
 @keyframes spin {
@@ -740,7 +740,23 @@ img {
 .nav_button:hover {
   box-shadow: 0 0 10px 0 crimson inset, 0 0 10px 4px crimson;
 }
-
+@media only screen and (max-width: 768px) and (min-width: 700px) {
+  body section.general .prent_for_animations{
+    width: 50% !important;
+    margin: 0 auto;
+    margin-bottom: 65px;
+  }
+  
+  body .card_animation_ch {
+    width: 60%;
+  }
+  body section.general img {
+    width: 60%;
+  }
+  body body section>ul.esoteric-attributes{
+    top: 27%;
+  }
+}
 @media (min-width: 700px){
 section.general {
   text-align: left;
@@ -764,7 +780,7 @@ body section>ul.esoteric-attributes {
   display: inline-block;
   margin-left: 0;
   position: absolute;
-  top: 36%;
+  top: 29%;
 }
 .prent_for_animations img {
   width: 45%;
@@ -922,8 +938,12 @@ section > ul.esoteric-attributes{
   section.general .prent_for_animations {
     width: 34%;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-bottom: 65px;
   }
+    .card_animation_ch::after {
+      top: calc(var(--card-height) / 14);
+      filter: blur(calc(var(--card-height) / 11));
+    }
     section.general img {
       width: 100%;
     }
@@ -948,6 +968,13 @@ section > ul.esoteric-attributes{
     background-attachment: fixed;
     color: white;
   }
+}
+
+@media  (max-width: 409px) {
+  .card_animation_ch::after {
+      top: calc(var(--card-height) / 35);
+
+    }
 }
 
 /* ##Device = Most of the Smartphones Mobiles (Portrait)
